# simple-cmake-bootstrap

./: CMakeLists.txt  vcpkg.json
app/: main.cpp
lib/inc/: statistics.hpp
lib/src/: statistics.cpp
test/functional/: statistics_test.cpp
test/performance/: libraries_bm.cpp
